#2304 Action Overflow Issue in Common Properties

--- a/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
@@ -44,7 +44,9 @@
 		display: flex;
 		> div:first-child {
 			width: 100%;
-			overflow-x: auto;
+			min-width: 0; // Prevent overflow issues
+			flex: 1; // Allow the div to grow and shrink
 		}
+		
 	}
 }
